--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,23 @@
 body
 {
-    text-align: center;
+    text-align: left;
     font-family: "Arial";
-    color: deeppink;
+    color: #333333;
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #dddddd;
+    margin: auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
