Agregado el contenido adicional del blog y tipografia

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     text-align: left;
-    font-family: "Arial";
+    font-family: courier;
     color: #333333;
     font-size: 10px;
     margin: 0;
