--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     text-align: left;
     font-family: arial;
-    color: #333333;
+    color: blue;
     font-size: 10px;
     margin: 0;
     padding: 0;
